# is-even-fast

./: Cargo.toml  Makefile  README.md  index.html
src/: lib.rs
